# prp_compiler

./: .coverage  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  Makefile  README.md  add_frontmatter.py  component_manifest.json  create_project_structure.sh  final_prp.md  manifest.json  my_github_app_prp.json  my_todo_app_prp.json  pyproject.toml  sitecustomize.py  tiktoken.py
_archive/v1_primitives/knowledge/: cc_commands.md  cc_deployment.md  cc_hooks.md  cc_monitoring.md  cc_settings.md  cc_troubleshoot.md
agent_capabilities/knowledge/: build_with_claude_code.md  cc_administration.md  cc_commands.md  cc_common_workflows.md  cc_deployment.md  cc_github_actions.md  cc_hooks.md  cc_mcp.md  cc_memory.md  cc_monitoring.md  cc_overview.md  cc_settings.md  cc_troubleshoot.md
agent_capabilities/schemas/: prp_base.md  prp_base_typescript.md  prp_planning.md  prp_spec.md  prp_task.md
agent_capabilities/tools/PRPs/: api-contract-define.md  prp-base-create.md  prp-base-execute.md  prp-planning-create.md  prp-spec-create.md  prp-spec-execute.md  prp-task-create.md  prp-task-execute.md  task-list-init.md
agent_capabilities/tools/code-quality/: refactor-simple.md  review-general.md  review-staged-unstaged.md
agent_capabilities/tools/development/: create-pr.md  debug-RCA.md  new-dev-branch.md  (+2 more)
capabilities/knowledge/: prp_best_practices.md
capabilities/schemas/: standard_prp.md
capabilities/tools/: file_lister.md
jsonschema/: __init__.py
semantic_version/: __init__.py
src/prp_compiler/: __init__.py  cache.py  config.py  context.py  knowledge.py  main.py  manifests.py  models.py  orchestrator.py  primitives.py  scripts.py  utils.py
src/typer/: __init__.py
tests/: conftest.py  temp_phase2_validation.py  test_cli.py  test_config.py  test_context.py  test_golden_set.py  test_integration.py  test_knowledge.py  test_manifests.py  test_models.py  test_orchestrator.py  test_planner.py  test_primitives.py  test_utils.py
tests/agents/: test_base_agent.py  test_planner.py  test_synthesizer.py
(+87 files in other folders)
