[project]
name = "prp-compiler"
version = "0.1.0"
description = "An agentic system for compiling high-fidelity PRPs."
requires-python = ">=3.9"
dependencies = [
    "typer[all]",
    "google-generativeai",
    "python-dotenv",
    "PyYAML",
    "pydantic",
    "tiktoken",
    "langchain",
    "langchain-community",
    "langchain-google-genai",
    "langchain-openai",
    "chromadb",
    "semantic-version",
    "jsonschema"
]

[project.scripts]
prp-compiler = "prp_compiler.main:app"
lint = "prp_compiler.scripts:lint"
validate = "prp_compiler.scripts:validate"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "types-PyYAML",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.mypy]
packages = ["prp_compiler"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []

# Allow unused variables in `__init__.py`.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]